plugins {
	id 'java'
	id 'application'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'DigitalEye'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		// Java 17이나 21로 설정을 추천
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	google()
}

compileJava.options.encoding = "UTF-8"
tasks.withType(JavaCompile) {
	options.encoding = "UTF-8"
	options.compilerArgs << "--enable-preview" // 예비 기능 활성화
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.json:json:20231013'
	runtimeOnly 'com.mysql:mysql-connector-j'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'net.minidev:json-smart:2.4.9'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-web-services'
	implementation 'org.jetbrains:annotations:23.0.0'

	implementation 'com.google.cloud:google-cloud-speech:4.42.0' // Google Cloud Speech API
	implementation 'com.google.cloud:google-cloud-apikeys:0.45.0' // Google API Keys
	implementation 'com.google.cloud:google-cloud-storage' // Google Cloud Storage

	implementation platform("com.google.cloud:libraries-bom:25.1.0")
	implementation 'com.google.cloud:google-cloud-speech' // Speech-to-text API
	implementation 'com.google.cloud:google-cloud-service-management' // Service Management API

	// 공공데이터 사용을 위한 Retrofit
	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'

	implementation 'mysql:mysql-connector-java:8.0.32'
}

application {
	mainClassName = 'speechrecognition.sttTest'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(Test) {
	jvmArgs '--enable-preview'
}

tasks.withType(JavaExec) {
	jvmArgs '--enable-preview'
}
